[gd_scene load_steps=10 format=3 uid="uid://cp3jep6i36i7r"]

[ext_resource type="Script" uid="uid://dw4miubirmnft" path="res://Scripts/StartMenu.gd" id="1_2w01c"]
[ext_resource type="Texture2D" uid="uid://0triggqvo46w" path="res://Sprites/Backgrounds/CityBackground1.png" id="1_l5kx3"]
[ext_resource type="Texture2D" uid="uid://h0cdghun0dhu" path="res://Sprites/Backgrounds/CityBackground2.png" id="2_haodl"]
[ext_resource type="Texture2D" uid="uid://b0gmrmn8geygg" path="res://Sprites/Decoration/Title.png" id="3_haodl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2w01c"]
bg_color = Color(0, 0.345098, 0.443137, 0.972549)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_swkfd"]
bg_color = Color(0, 0.345098, 0.443137, 0.972549)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_haodl"]
bg_color = Color(0, 0.345098, 0.443137, 0.439216)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2bkxv"]
bg_color = Color(0, 0.345098, 0.443137, 0.972549)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_86a87"]
bg_color = Color(0, 0.345098, 0.443137, 0.972549)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2w01c")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Blue" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(160, 90)
scale = Vector2(0.864865, 0.818182)
texture = ExtResource("1_l5kx3")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(320, 0)

[node name="Clouds" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(160, 90)
scale = Vector2(0.864865, 0.818182)
texture = ExtResource("2_haodl")

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(159.75, 53)
scale = Vector2(2.24219, 2.24219)
texture = ExtResource("3_haodl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = -84.0
offset_right = 71.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_styles/focus = SubResource("StyleBoxFlat_2w01c")
theme_override_styles/hover = SubResource("StyleBoxFlat_swkfd")
theme_override_styles/normal = SubResource("StyleBoxFlat_haodl")
text = "Start playing"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
theme_override_styles/focus = SubResource("StyleBoxFlat_2bkxv")
theme_override_styles/hover = SubResource("StyleBoxFlat_86a87")
theme_override_styles/normal = SubResource("StyleBoxFlat_haodl")
text = "Options
"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 13
theme_override_styles/focus = SubResource("StyleBoxFlat_2bkxv")
theme_override_styles/hover = SubResource("StyleBoxFlat_86a87")
theme_override_styles/normal = SubResource("StyleBoxFlat_haodl")
text = "Exit game"

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
